--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -111,8 +111,8 @@ We then run the $k$-means algorithm \cite{kmeans} and obtain a set of $k$ centro
 Each matrix $C_i$ represents a vector space basis and can be used to map points in $\RR^{n_i}$ into a $k$-dimensional space, where the coordinates of a vector $x \in \RR^{n_i}$ are expressed as: $$(C_i^T C_i)^{-1} C_i^T x_i.$$
 
 The resulting matrix (when appropriately scaled to have unit norm) for similarity computation between language $i$ and language $j$ is defined as:
-$$C_i(C_i^T C_i)^{-1} (C_j^T C_j)^{-1} C_j.$$ 
- 
+$$C_i(C_i^T C_i)^{-1} (C_j^T C_j)^{-1} C_j.$$
+
 %% We could skip this par
 In the implementation of $k$-means clustering we never form the matrix $X$ explicitly but rather implement implicit multiplication as $X x = \sum_{i=1}^\ell X_i x$ and multiplication with transpose as $X^T y = \sum_{i=1}^\ell X_i^T y_i,$ where $y$ is partitioned accordingly to $X$. That lowers memory requirement and compacts sparse indexing, leading to faster element access.
 
@@ -121,8 +121,8 @@ In the implementation of $k$-means clustering we never form the matrix $X$ expli
 The next method is CL-LSI which is a variant of LSI~\cite{lsi} for more than one language. The method is based on computing a truncated singular value decomposition of $X \approx U S V^T$. Since the matrix can be large we can use an iterative method like the Lanczos~\cite{matrix_comp} algorithm with reorthogonalization to find the left singular vectors (columns of $U$) corresponding to the largest singular values. It turns out that the Lanczos method converges slowly as the gap between the leading singular values is small. Moreover, the Lanczos method is hard to parallelize. Instead we use a randomized version of the singular value decomposition (SVD) described in \ref{randomizedSVD} that can be viewed as a block Lanczos method. That enables us to use parallelization and speeds up the computation considerably.
 
 The cross-lingual similarity functions are based on a rank-$k$ truncated SVD: $X \approx U \Sigma V^T,$ where $U \in \RR^{N \times k}$ are basis vectors of interest and $\Sigma \in \RR^{k \times k}$ is truncated diagonal matrix of singular eigenvalues.
- 
- 
+
+
 {\color{red}
  Each column $u_i$ of $U_k$ consists of block vectors $u_i = \begin{bmatrix} u^{1^T}_i & \dots & u^{\ell^T}_i \end{bmatrix}^T.$ We do not normalize each block $j$  as this would destroy the low rank approximation. Each block $j$ is normalized $u^{j^1}_i = u^{j^1}_i/||u^{j^1}_i||$ to reduce the bias.
 
@@ -297,17 +297,17 @@ One of the use cases where article linking information can be applied is also in
 
 Event Registry works by collecting and analyzing news articles that are published by news outlets in different languages all over the world. Collected articles are first semantically annotated by identifying in them mentions of relevant concepts -- either entities or important keywords. The disambiguated and entity linking of the concepts is done using Wikipedia as the main knowledge base. The key step in Event Registry is then to apply an online clustering algorithm on the articles in order to identify groups of articles that are discussing the same event. For each new article, the clustering algorithm determines if the article should be assigned to some existing cluster or into a new cluster. The underlying assumption is that articles that are describing the same event are similar enough and will therefore be put into the same cluster.
 
-In short, the article clustering works as follows (details are available in \cite{}). First we create a new document by joining the title and the body of the article. We then tokenize the document, remove the stop words and stem the words. The remaining words are represented as a vector in the vector-space model. Each value in the vector is normalized using the TF-IDF approach, defined as $TFIDF(t,d) = TF(t,d) * IDF(t)$. $TF(t,d)$ represents the \emph{term frequency} (number of times the term $t$ appears in the document $d$), and $IDF(t) = log(N / DF(t))$ is the \emph{inverse document frequency} of term $t$. $IDF(t)$ is computed by comparing the number of documents mentioning the term $t$ ($DF(t)$) with the total number of documents $N$. After normalizing the vector, we use it to find the most similar existing cluster. To be able to compare the vector with a cluster we first need a vector representation for each of the clusters. This is done by computing a centroid vector of the cluster by simply averaging the vectors of the articles in the cluster. By computing the cosine similarity of the article vector with each of the centroid vectors we then find the cluster with the highest similarity. If the highest similarity is above the selected threshold (0.4 in our experiments), the article is assigned to the corresponding cluster, otherwise a new cluster is created, initially containing only the single article.
+In short, the article clustering works as follows (details are available in \cite{}). First we create a new document by joining the title and the body of the article. We then tokenize the document, remove the stop words and stem the words. The remaining words are represented as a vector in the vector-space model. Each value in the vector is additionally normalized using TF-IDF. After normalization, we use the vector to find the most similar existing cluster. To be able to compare the vector with a cluster we first need a vector representation for each of the clusters. This is done by computing a centroid vector of the cluster by simply averaging the vectors of the articles in the cluster. By computing the cosine similarity of the article vector with each of the centroid vectors we then find the cluster with the highest similarity. If the highest similarity is above the selected threshold (we used 0.4 in our experiments), the article is assigned to the corresponding cluster, otherwise a new cluster is created, initially containing only the single article.
 
 Since articles about an event are commonly written only for a short period of time, we remove clusters once the oldest article in the cluster becomes more than 4 days old. This housekeeping mechanism prevents the clustering from becoming slow and also ensures that articles are not assigned to obsolete clusters.
 
-In order to treat the cluster as describing an event in Event Registry, the cluster has to grow above a certain number of articles (the number depends on the language). This condition ensures that only content that receives a sufficient coverage in the media is treated as an event. Once a new event is identified, a new unique ID is assigned to it and the main information about the event is automatically extracted by analyzing the articles assigned to it. The extracted information includes properties such as the date of the event, the location, who is involved in it, what the event is about, etc.
+In order to treat the cluster as describing an event in Event Registry, the cluster has to grow above a certain number of articles (the number depends on the language). This condition ensures that only content that receives a sufficient coverage in the media is treated as an event. Once a new event is identified, a new unique ID is assigned to it and the main information about the event is then automatically extracted by analyzing the articles assigned to it. The extracted information includes properties such as the date of the event, the location, who is involved in it, what the event is about, etc.
 
-The clustering of articles is done for each language separately -- English articles are, for example, clustered separately from Spanish articles. When events are identified, they will therefore be identified from clusters in each language separately. This has an undesirable consequence for Event Registry where the same actual event will be represented with two or more event IDs, and each event will only contain coverage in a single language. To avoid this problem we want to exploit the available information about the similarity of the articles in a cluster with articles in other languages. Using this information we hope to be able to connect clusters in different languages and represent them using a single event ID.
+The clustering of articles is done for each language separately -- English articles are, for example, clustered separately from Spanish articles. When events are identified, they will therefore be identified from clusters in each language separately. As a result, the same event will be represented in Event Registry with two or more event IDs, and each event will only contain coverage in a single language. To avoid this problem we want to exploit the available information about the similarity of the articles in a cluster with articles in other languages. Using this information we hope to be able to connect clusters in different languages and represent them using a single event ID.
 
 \subsection{Problem definition}
 
-Formally, the problem of identifying the clusters describing the same event can be formalized as follows. Each article $a_i$ is written in a language $l$, where $l \in \{A,B,...,H\}$. For each language $l$, a set of clusters $C_l$ is generated and maintained that only contains articles in language $l$. For any cluster $c_i \in C_{l1}$, the task is then to identify other clusters $c_j \in C_{l2}$ (where $l1 \neq l2$) that are describing the same event as $c_i$. We will refer to cluster pairs $c_i$ and $c_j$ that are describing the same event as equivalent clusters. An additional requirement of the task is that identification of the equivalent clusters should not be done exhaustively -- for a cluster $c_i$ we wish to avoid testing all other clusters $c_j$. Performing exhaustive comparison for each cluster $c_i$ would result in $O(N^2)$ tests, where $N$ is the number of all clusters, which is not feasible when the number of clusters is in tens of thousands.
+Formally, the problem of identifying the clusters describing the same event can be formalized as follows. Each article $a_i$ is written in a language $l$, where $l \in L = \{l_1,l_2,...,l_k\}$. For each language $l$, a set of clusters $C_l$ is generated and maintained that only contains articles in language $l$. For any cluster $c_i \in C_{l_a}$, the task is then to identify other clusters $c_j \in C_{l_b}$ (where $l_a \neq l_b$) that are describing the same event as $c_i$. We will refer to cluster pairs $c_i$ and $c_j$ that are describing the same event as equivalent clusters. An additional requirement of the task is that identification of the equivalent clusters should not be done exhaustively -- for a cluster $c_i$ we wish to avoid testing all other clusters $c_j$. Performing exhaustive comparison for each cluster $c_i$ would result in $O(N^2)$ tests, where $N$ is the number of all clusters, which is not feasible when the number of clusters is in tens of thousands.
 
 \subsection{Algorithm}
 
@@ -376,7 +376,7 @@ In order to use a supervised approach to determine if two clusters $c_i$ and $c_
 
 \subsection{Evaluation}
 
-In order to evaluate the quality of individual features and the overall model we have performed a set of experiments. 
+In order to evaluate the quality of individual features and the overall model we have performed a set of experiments.
 
 evaluate accuracy on different language pairs only. compute accuracies using the CCA features only, using concept features only, or using all features.
 
