--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -40,6 +40,22 @@
 \begin{abstract}
 \todo{tralala hopsasa.}
 \end{abstract}
+\section{Overview}
+Structure
+\begin{itemize}
+\item Introduction
+\item Cross lingual document similarity (model)
+\item  Event Detection
+\item  Combing the approaches
+\item Experiments
+\item Conclusions
+\end{itemize}
+The story:
+\begin{itemize}
+\item Description of the problem - we would liek to understand events ans sequences of events, but our observables (e.g. news stories) occur in a variety of languages
+\item We present an approach to tackle this problem using a combination of techniques....
+\item Ultimately we present a tool showing the feasibility of our approach
+\end{itemize}
 
 \section{Introduction}
 
