--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -353,6 +353,24 @@ In order to evaluate the quality of individual features and the overall model we
 
 evaluate accuracy on different language pairs only. compute accuracies using the CCA features only, using concept features only, or using all features.
 
+\begin{table}[h]
+\caption{Accuracy of story linking with different sets of features}
+\label{table:linkingEval}
+\begin{center}
+\begin{tabular}{|c|c|c|c|}
+  \hline
+  \cline{1-4}
+  Features & CA & Precision & Recall \\ \cline{1-4}
+  CCA & 73.2\% & 0.717 & 0.763 \\ \cline{1-4}
+  Concepts & 88.5\% & 0.888 & 0.882 \\ \cline{1-4}
+  Misc & 62.7\% & 0.583 & 0.904 \\ \cline{1-4}
+  CCA + concepts & 89.0\% & 0.893 & 0.887 \\ \cline{1-4}
+  All & 88.9\% & 0.893 & 0.884 \\ \cline{1-4}
+  \hline
+\end{tabular}
+\end{center}
+\end{table}
+
 \subsubsection{Compare different feature subsets}
 
 \subsubsection{Accuracy across different language pairs}
